--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
         <link rel="icon" href="https://funty.org/assets/logo.png">
    </head>
    <body>
-        <img alt='Logo' id='logo' src='https://funty.org/assets/logo.png'/>
+        <img alt='Logo' id='logo' src='./assets/logo.png'/>
         <spam id='err'>Error 404</spam>
         <spam id='notfound'>The page could not be found.</spam>
         <div id='links'>
-            <a class='link' href='https://network.funty.org/'><i aria-hidden='true'></i>Home</a>
+            <a class='link' href='https://mastersofcrafters.de/'><i aria-hidden='true'></i>Home</a>
         </div>
         <style>
             body {
@@ -78,24 +78,6 @@
             .link:active {
                 transform: translateY(6px);
 	            box-shadow: 0px 0px #FF9C3F;
-            }
-            .media {
-                background: #c20909;
-	            width: 38px;
-	            height: 38px;
-	            text-align: center;
-	            color: Black;
-	            margin-bottom: 40px;
-	            box-shadow: 0px 6px #700606;
-	            transition: all 0.15s;
-            }
-            .media:hover {
-                box-shadow: 0px 8px rgb(133, 6, 6);
-                transform: translateY(-2px);
-            }
-            .media:active {
-                transform: translateY(6px);
-	            box-shadow: 0px 0px #c20909;
             }
         </style>
     </body>
