--- a/index.html
+++ b/index.html
@@ -2,46 +2,38 @@
 
 <html>
    <head>
-        <title>Funty</title>
+        <title>Masters of Crafters</title>
         <script src="https://kit.fontawesome.com/e818a9840c.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="./assets/logo.png">
+        <link rel="icon" href="https://funty.org/assets/logo.png">
    </head>
-   <body>
+   <body onload="startCounter()">
         <div class='navbar no-items section' id='navbar'></div>
-        <img alt='Logo' id='logo' src='https://funty.org/assets/logo.png'/>
-        <spam id='Name'>Welcome to Network.Funty.org</spam>
-        <spam id='subtitle'>This website list all social media sites from Funty´s Netzwerk.</spam>
-        <div id='links'>
-            <a class='link' href='https://discord.com/invite/EjQh3HsbSm'><i aria-hidden='true'></i>Discord</a>
-            <a class='link' href='https://www.guilded.gg/FuntysNetzwerk'><i aria-hidden='true'></i>Guilded (work in progress)</a>
-            <hr id='border'>
-            <a class='link2 link' href='https://twitter.com/FuntysNetzwerk'><i aria-hidden='true'></i>Twitter</a>
-            <a class='link2 link' href='https://www.twitch.tv/funtysnetzwerk'><i aria-hidden='true'></i>Twitch</a>
-            <a class='link2 link' href='https://github.com/FuntysNetzwerk'><i aria-hidden='true'></i>Github</a>
-            <a class='link2 link' href='https://www.youtube.com/channel/UCP6davrlvweiSkSxnsyPtBA'><i aria-hidden='true'></i>Youtube</a>
-            <a class='link2 link' href='https://www.reddit.com/user/FuntysNetzwerk'><i aria-hidden='true'></i>Reddit</a>
+        <br></br>
+        <spam id='title'>Willkommen auf der Website von Masters of Crafters</spam>
+        <br></br>
+        <div id='countdown'>
+            <br></br>
+            <spam id='subtitle'>Masters of Crafters läuft seit:</spam>
+            <ul>
+                <li><span id="days"></span>Tage</li>
+                <li><span id="hours"></span>Stunden</li>
+                <li><span id="minutes"></span>Minuten</li>
+                <li><span id="seconds"></span>Sekunden</li>
+          </ul>
+        </div>
+        <br></br>
+        <div class="slideshow">
+            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
         </div>
         <style>
             body {
                 background-color: black;
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             }
-            #logo {
-                width: 96px;
-	            height: 96px;
-	            display: block;
-	            margin: 35px auto 20px;
-	            transition: all 1s;
-            }
-            #logo:hover {
-                -webkit-transition: -webkit-transform .8s ease-in-out;
-                -ms-transition: -ms-transform .8s ease-in-out;
-                transition: transform .8s ease-in-out;
-	            transform:rotate(360deg);
-                -ms-transform:rotate(360deg);
-                -webkit-transform:rotate(360deg);
-            }
-            #Name {
+            #title {
                 color: #fc9434;
 	            font-size: 3rem;
 	            font-weight: 600;
@@ -49,52 +41,82 @@
 	            display: block;
 	            width: 100%;
 	            text-align: center;
+                text-decoration: underline
             }
             #subtitle {
-                color: #d67315;
-	            font-size: 1.5rem;
+                color: #d4761d;
+	            font-size: 3rem;
 	            font-weight: 600;
 	            line-height: 1.25;
 	            display: block;
 	            width: 100%;
 	            text-align: center;
             }
-            #links {
-                max-width: 675px;
-	            width: auto;
-	            display: block;
-	            margin: 27px auto;
+            #countdown {
+                color: #d4761d;
+                margin: 0 auto;
+                text-align: center;
+                border: 4px dashed #261505
             }
-            .link {
+            h1 {
+                font-weight: 600;
+                letter-spacing: 0.500rem;
+                font-size: 3.0em;
+                text-transform: uppercase;
+            }
+            li {
+                display: inline-block;
+                font-size: 2.0em;
+                list-style-type: none;
+                padding: 2em;
+                text-transform: uppercase;
+            }
+            li span {
                 display: block;
-	            background-color: #f3943c;
-	            color: black;
-	            font-family: var(--font);
-	            text-align: center;
-	            margin-bottom: 20px;
-	            padding: 17px;
-	            text-decoration: none;
-	            font-size: 1rem;
-	            font-weight: bold;
-	            transition: all 0.15s;
-	            box-shadow: 0px 6px #ec790d;
+                font-size: 3.5rem;
             }
-            .link:hover {
-                box-shadow: 0px 8px #ec7200;
-	            transform: translateY(-2px);
-            }
-            .link:active {
-                transform: translateY(6px);
-	            box-shadow: 0px 0px #f0933c;
-            }
-            .link2 {
-	            background-color: #e99648;
-            }
-            #border {
-                border: 3px solid #ec7200;
-                border-radius: 5px;
-                font-size: 1.5rem;
+            .slides {
+                margin-left: auto;
+                margin-right: auto;
+                border: 4px solid #BC681A
             }
         </style>
     </body>
 </html>
+<script>
+    function startCounter() {
+        const second = 1000,
+        minute = second * 60,
+        hour = minute * 60,
+        day = hour * 24
+        var x
+        let startday = "Jun 26, 2021 00:00:00",
+        countDown = new Date(startday).getTime()
+        x = setInterval(function () {
+            let now = new Date().getTime(),
+            distance = countDown - now;
+
+        (document.getElementById("days").innerText = Math.abs(Math.floor(distance / day))),
+
+        (document.getElementById("hours").innerText = Math.abs(Math.floor((distance % day) / hour))),
+
+        (document.getElementById("minutes").innerText = Math.abs(Math.floor((distance % hour) / minute))),
+        
+        (document.getElementById("seconds").innerText = Math.abs(Math.floor((distance % minute) / second)));
+        }, 0)
+    }
+    var slideIndex = 0;
+    slideshow();
+
+    function slideshow() {
+        var i;
+        var x = document.getElementsByClassName("slides");
+        for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > x.length) {slideIndex = 1}
+        x[slideIndex-1].style.display = "block";
+        setTimeout(slideshow, 2000);
+    }
+</script>
