--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br></br>
         <div id='countdown'>
             <br></br>
-            <spam id='subtitle'>Masters of Crafters läuft seit:</spam>
+            <spam id='subtitle'>Masters of Crafters 2 läuft seit:</spam>
             <ul>
                 <li><span id="days"></span>Tage</li>
                 <li><span id="hours"></span>Stunden</li>
@@ -23,10 +23,16 @@
         </div>
         <br></br>
         <div class="slideshow">
-            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
-            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
-            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
-            <img class="slides" src="./assets/slideshow/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc1/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc1/2.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc1/3.png" style="width:30%">
+
+            <img class="slides" src="./assets/slideshow/moc2/1.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/2.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/3.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/4.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/5.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/6.png" style="width:30%">
         </div>
         <style>
             body {
