--- a/index.html
+++ b/index.html
@@ -34,61 +34,131 @@
             <img class="slides" src="./assets/slideshow/moc2/5.png" style="width:30%">
             <img class="slides" src="./assets/slideshow/moc2/6.png" style="width:30%">
         </div>
-        <style>
-            body {
-                background-color: black;
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            }
-            #title {
-                color: #fc9434;
-	            font-size: 3rem;
-	            font-weight: 600;
-	            line-height: 1.25;
-	            display: block;
-	            width: 100%;
-	            text-align: center;
-                text-decoration: underline
-            }
-            #subtitle {
-                color: #d4761d;
-	            font-size: 3rem;
-	            font-weight: 600;
-	            line-height: 1.25;
-	            display: block;
-	            width: 100%;
-	            text-align: center;
-            }
-            #countdown {
-                color: #d4761d;
-                margin: 0 auto;
-                text-align: center;
-                border: 4px dashed #261505
-            }
-            h1 {
-                font-weight: 600;
-                letter-spacing: 0.500rem;
-                font-size: 3.0em;
-                text-transform: uppercase;
-            }
-            li {
-                display: inline-block;
-                font-size: 2.0em;
-                list-style-type: none;
-                padding: 2em;
-                text-transform: uppercase;
-            }
-            li span {
-                display: block;
-                font-size: 3.5rem;
-            }
-            .slides {
-                margin-left: auto;
-                margin-right: auto;
-                border: 4px solid #BC681A
-            }
-        </style>
+        <br></br>
+        <br></br>
+        <br></br>
+        <div id ='para'>
+            <img id='paraImg' src="./assets/logos/moc2.png" style="width:10%">
+            <div id ='paraText'>
+                <h2 id='paraTitle'>Masters of Crafters 2</h2>
+                <p style="text-align: left;">Konzept: 
+                    <span style="color: #fc9434;">SMP</span>
+                    <span style="color: #808080;">(Survival Multiplayer)</span>
+                    <br>Version: 
+                    <span style="color: #fc9434;"></span>
+                    <a style="color: #fc9434;" href="https://www.minecraft.net/de-de/article/minecraft-java-edition-1-16-4">1.17 Java Editon</a>
+                    <br>Mitspieler: 
+                    <span style="color: #fc9434;"> </span>
+                    <br>Von: 
+                    <span style="color: #fc9434;">26.06.2021</span>
+                    <br>Bis: 
+                    <span style="color: #fc9434;">-</span>
+                </p>
+                <p id='paraDescription'>Download: -
+                </p>
+            </div>
+        </div>
+        <br></br>
+        <div id ='para'>
+            <img id='paraImg' src="./assets/logos/moc1.png" style="width:10%">
+            <div id ='paraText'>
+                <h2 id='paraTitle'>Masters of Crafters 1</h2>
+                <p style="text-align: left;">Konzept: 
+                    <span style="color: #fc9434;">SMP</span>
+                    <span style="color: #808080;">(Survival Multiplayer)</span>
+                    <br>Version: 
+                    <span style="color: #fc9434;"></span>
+                    <a style="color: #fc9434;" href="https://www.minecraft.net/de-de/article/minecraft-java-edition-1-16-4">1.16.4 Java Editon</a>
+                    <br>Mitspieler: 
+                    <span style="color: #fc9434;">67</span>
+                    <br>Von: 
+                    <span style="color: #fc9434;">05.04.2020</span>
+                    <br>Bis: 
+                    <span style="color: #fc9434;">18.01.2021</span>
+                </p>
+                <p id='paraDescription'>Download: 
+                    <a style="color: #fc9434;" href="https://download1639.mediafire.com/c2jipqo4ruwg/7h33ss4fz3vssmt/overworld.zip">OVERWORLD,</a>
+                    <a style="color: #fc9434;" href="https://download1510.mediafire.com/7z1u5q6bx2fg/dhudczo88y9q4f6/nether.zip">NETHER,</a>
+                    <a style="color: #fc9434;" href="https://download943.mediafire.com/ytywz3kt7l3g/17xyum8zoxpycgu/end.zip">END</a>
+                </p>
+            </div>
+        </div>
     </body>
 </html>
+<style>
+    body {
+        background-color: black;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    #title {
+        color: #fc9434;
+        font-size: 3rem;
+        font-weight: 600;
+        line-height: 1.25;
+        display: block;
+        width: 100%;
+        text-align: center;
+        text-decoration: underline
+    }
+    #subtitle {
+        color: #d4761d;
+        font-size: 3rem;
+        font-weight: 600;
+        line-height: 1.25;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+    #countdown {
+        color: #d4761d;
+        margin: 0 auto;
+        text-align: center;
+        border: 4px dashed #261505
+    }
+    h1 {
+        font-weight: 600;
+        letter-spacing: 0.500rem;
+        font-size: 3.0em;
+        text-transform: uppercase;
+    }
+    li {
+        display: inline-block;
+        font-size: 2.0em;
+        list-style-type: none;
+        padding: 2em;
+        text-transform: uppercase;
+    }
+    li span {
+        display: block;
+        font-size: 3.5rem;
+    }
+    .slides {
+        margin-left: auto;
+        margin-right: auto;
+        border: 4px solid #BC681A
+    }
+    #para{
+        color: #d4761d;
+        border: 4px dashed #261505;
+        text-align: left;
+    }
+    #paraImg {
+        display: inline-block;
+        padding: 30px;
+    }
+    #paraTitle {
+        font-size: 2rem;
+        display: block;
+    }
+    #paraDescription {
+        font-size: 1rem;
+        display: block;
+    }
+    #paraText {
+        display: inline-block;
+        vertical-align: top;
+    }
+</style>
 <script>
     function startCounter() {
         const second = 1000,
