--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span style="color: #808080;">(Survival Multiplayer)</span>
                     <br>Version: 
                     <span style="color: #fc9434;"></span>
-                    <a style="color: #fc9434;" href="https://www.minecraft.net/de-de/article/minecraft-java-edition-1-16-4">1.17 Java Editon</a>
+                    <span style="color: #fc9434;">1.17 Java & Bedrock Editon</span>
                     <br>Mitspieler: 
                     <span style="color: #fc9434;"> </span>
                     <br>Von: 
