--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <br>Version: 
                     <span style="color: #fc9434;"></span>
                     <span style="color: #fc9434;">1.17 Java & Bedrock Editon</span>
-                    <br>Mitspieler: 
-                    <span style="color: #fc9434;"> </span>
+                    <br>Mitspieler¹: 
+                    <span style="color: #fc9434;">96</span>
                     <br>Von: 
                     <span style="color: #fc9434;">26.06.2021</span>
                     <br>Bis: 
@@ -83,6 +83,7 @@
                 </p>
             </div>
         </div>
+        <p style="color: #808080; font-size: 15px;">¹Anzahl der accounts auf der Whitelist.</p>
     </body>
 </html>
 <style>
