--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             <img class="slides" src="./assets/slideshow/moc2/4.png" style="width:30%">
             <img class="slides" src="./assets/slideshow/moc2/5.png" style="width:30%">
             <img class="slides" src="./assets/slideshow/moc2/6.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/7.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/8.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/9.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/10.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/11.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/12.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/13.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/14.png" style="width:30%">
+            <img class="slides" src="./assets/slideshow/moc2/15.png" style="width:30%">
         </div>
         <br></br>
         <br></br>
