--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Masters of Crafters</title>
         <script src="https://kit.fontawesome.com/e818a9840c.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://funty.org/assets/logo.png">
+        <meta name="author" content="Funty" />
+        <meta name="description" content="Die offizielle Website für die Minecraft Projektreihe &bdquo;Masters of Crafters&ldquo;" />
+        <meta name="keywords" content="funty, Masters of Crafters, moc, Website, Minecraft, Projekt, reihe, offiziell" />
    </head>
    <body onload="startCounter()">
         <div class='navbar no-items section' id='navbar'></div>
