--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br></br>
         <div id='countdown'>
             <br></br>
-            <spam id='subtitle'>Masters of Crafters 2 läuft seit:</spam>
+            <spam id='subtitle'>Masters of Crafters 2 endete vor:</spam>
             <ul>
                 <li><span id="days"></span>Tage</li>
                 <li><span id="hours"></span>Stunden</li>
@@ -64,9 +64,12 @@
                     <br>Von: 
                     <span style="color: #fc9434;">26.06.2021</span>
                     <br>Bis: 
-                    <span style="color: #fc9434;">-</span>
+                    <span style="color: #fc9434;">13.11.2021</span>
+                    <br>Dauer: 
+                    <span style="color: #fc9434;">141 Tage</span>
                 </p>
-                <p id='paraDescription'>Download: -
+                <p id='paraDescription'>Download: 
+                    <a style="color: #fc9434;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">coming soon</a>
                 </p>
             </div>
         </div>
@@ -87,6 +90,8 @@
                     <span style="color: #fc9434;">05.04.2020</span>
                     <br>Bis: 
                     <span style="color: #fc9434;">18.01.2021</span>
+                    <br>Dauer: 
+                    <span style="color: #fc9434;">289 Tage</span>
                 </p>
                 <p id='paraDescription'>Download: 
                     <a style="color: #fc9434;" href="https://download1639.mediafire.com/c2jipqo4ruwg/7h33ss4fz3vssmt/overworld.zip">OVERWORLD,</a>
@@ -179,7 +184,7 @@
         hour = minute * 60,
         day = hour * 24
         var x
-        let startday = "Jun 26, 2021 00:00:00",
+        let startday = "Nov 13, 2021 14:38:00",
         countDown = new Date(startday).getTime()
         x = setInterval(function () {
             let now = new Date().getTime(),
