--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </p>
             </div>
         </div>
-        <p style="color: #808080; font-size: 15px;">¹Anzahl der accounts auf der Whitelist.</p>
+        <p style="color: #808080; font-size: 15px;">¹Anzahl der Accounts auf der Whitelist.</p>
     </body>
 </html>
 <style>
