--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span style="color: #fc9434;">141 Tage</span>
                 </p>
                 <p id='paraDescription'>Download: 
-                    <a style="color: #fc9434;" href="https://download1594.mediafire.com/ti5yxjm2hvfg/2poevciqikpf8an/world.zip">world</a>
+                    <a style="color: #fc9434;" href="https://download1594.mediafire.com/ti5yxjm2hvfg/2poevciqikpf8an/world.zip">WORLD</a>
                 </p>
             </div>
         </div>
