--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Alles was ausmakiert ist, ist eine angefangene Idee, welche noch nicht fertig is
         <br>
         <div id='countdown'>
             <br>
-            <spam id='subtitle'>Masters of Crafters 3 beginnt in:</spam>
+            <spam id='subtitle'>Masters of Crafters 3 läuft seit:</spam>
             <ul>
                 <li><span id="days"></span>Tagen</li>
                 <li><span id="hours"></span>Stunden</li>
