--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Alles was ausmakiert ist, ist eine angefangene Idee, welche noch nicht fertig is
         <br>
         <div id='countdown'>
             <br>
-            <spam id='subtitle'>Masters of Crafters 3 läuft seit:</spam>
+            <spam id='subtitle'>Masters of Crafters 3 endet in:</spam>
             <ul>
                 <li><span id="days"></span>Tagen</li>
                 <li><span id="hours"></span>Stunden</li>
@@ -63,13 +63,13 @@ Alles was ausmakiert ist, ist eine angefangene Idee, welche noch nicht fertig is
                     <span style="color: #fc9434;"></span>
                     <span style="color: #fc9434;">1.19 Java & Bedrock Editon</span>
                     <br>Mitspieler¹: 
-                    <span style="color: #fc9434;">?</span>
+                    <span style="color: #fc9434;">95</span>
                     <br>Von: 
                     <span style="color: #fc9434;">05.08.2022</span>
                     <br>Bis: 
-                    <span style="color: #fc9434;">?</span>
+                    <span style="color: #fc9434;">26.11.2022</span>
                     <br>Dauer: 
-                    <span style="color: #fc9434;">?</span>
+                    <span style="color: #fc9434;">114 Tage</span>
                 </p>
                 <p id='paraDescription'>Download: 
                 </p>
