--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Alles was ausmakiert ist, ist eine angefangene Idee, welche noch nicht fertig is
         <br>
         <div id='countdown'>
             <br>
-            <spam id='subtitle'>Masters of Crafters 3 endet in:</spam>
+            <spam id='subtitle'>Masters of Crafters 3 endete vor:</spam>
             <ul>
                 <li><span id="days"></span>Tagen</li>
                 <li><span id="hours"></span>Stunden</li>
@@ -71,7 +71,11 @@ Alles was ausmakiert ist, ist eine angefangene Idee, welche noch nicht fertig is
                     <br>Dauer: 
                     <span style="color: #fc9434;">114 Tage</span>
                 </p>
-                <p id='paraDescription'>Download: 
+                    <p id='paraDescription'>Download: 
+                        <a style="color: #fc9434;" href="https://drive.google.com/file/d/1LA1O8ABU8xNO1wfqJL_wAPHeHSBNwS7i/view?usp=share_link">Complete map,</a>
+                        <a style="color: #fc9434;" href="https://drive.google.com/file/d/1lZR79x6h4xn5gteZ0emyqaJWt9_5LRIS/view?usp=share_link">Map without end,</a>
+                        <a style="color: #fc9434;" href="https://drive.google.com/file/d/1CmusX1nUdi0DdvU1rSnbsk0cSLG0jXl7/view?usp=share_link">Trimmed map</a>
+                    </p>
                 </p>
             </div>
 
