REMAKE - read commit description
I started to remake the website. IT IS NOT FINISHED YET. But I'm already ready for feedback ;) If you miss something that you need NOW check out https://mastersofcrafters.de/moc

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="https://funty.org/assets/logo.png">
    </head>
    <body>
-        <img alt='Logo' id='logo' src='./assets/logo.png'/>
+        <img alt='Logo' id='logo' src='https://funty.org/assets/logo.png'/>
         <spam id='err'>Error 404</spam>
         <spam id='notfound'>The page could not be found.</spam>
         <div id='links'>
