Ignore this, look at https://github.com/FuntyGithub/mastersofcrafters.de/commit/a1980e58bc0d7c59c6faf3d2425220984430ed23

--- a/moc/index.html
+++ b/moc/index.html
@@ -20,7 +20,7 @@
 
     <div class="">
         <!-- <img src="../assets/logos/moc1.png" alt="Logo" class="logo"> -->
-        <h1>Comming soon</h1>
+        <h1>Coming soon</h1>
         <a style="color: #ffaf64;" href="https://web.archive.org/web/20230310201926/https://mastersofcrafters.de/">Zur früheren Version von mastersofcrafters.de</a>
 
         <p style="color: #ffaf64;">Download Masters of Crafters 3:
