--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Auf dieser Website findest du alle Infos zu den bisherigen Staffeln.
                 </p>
             </div>
-            <iframe class="" id="discordIframe" src="https://discord.com/widget?id=962143170051858452&theme=dark" width="350" height="100%" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <iframe title="masters of crafters discord" id="discordIframe" src="https://discord.com/widget?id=962143170051858452&theme=dark" width="350" height="100%" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                
         </div>
 
