read commit description
added pages for the seasons.
Still WIP but kind of usable (except for mobile or similar)
I know this code is not very clean, this is because its still WIP!

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         Teilnehmer: <span class="title">95</span><br>
                     </p>
                 </div>
-                <button class="button" onclick="window.location.href='https://mastersofcrafters.de/moc'">Mehr erfahren</button>
+                <button class="button" onclick="window.location.pathname = './moc3'">Mehr Infos</button>
             </div>
             
             <div class="container season" id="season2">
@@ -83,7 +83,7 @@
                         Teilnehmer: <span class="title">96</span><br>
                     </p>
                 </div>
-                <button class="button" onclick="window.location.href='https://mastersofcrafters.de/moc'">Mehr erfahren</button>
+                <button class="button" onclick="window.location.pathname = './moc2'">Mehr Infos</button>
             </div>
 
             <div class="container season" id="season1">
@@ -98,7 +98,7 @@
                         Teilnehmer: <span class="title">67</span><br>
                     </p>
                 </div>
-                <button class="button" onclick="window.location.href='https://mastersofcrafters.de/moc'">Mehr erfahren</button>
+                <button class="button" onclick="window.location.pathname = './moc1'">Mehr Infos</button>
             </div>
 
         </div>
