--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="icon" href="https://funty.org/assets/logo.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e818a9840c.js" crossorigin="anonymous"></script>
-    <meta name="author" content="Funty" />
+    <meta name="author" content="Funty#8818" />
     <meta name="description" content="Die offizielle Website für die Minecraft Projektreihe &bdquo;Masters of Crafters&ldquo;" />
-    <meta name="keywords" content="funty, Masters of Crafters, moc, Website, Minecraft, Projekt, reihe, offiziell" />
+    <meta name="keywords" content="Funty, Funty#8818, Masters of Crafters, moc, Website, Minecraft, Projekt, reihe, offiziell" />
 </head>
 
 <body class="darkmode">
