--- a/moc3/index.html
+++ b/moc3/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../style.css"/>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e818a9840c.js" crossorigin="anonymous"></script>
-    <meta name="author" content="Funty" />
+    <meta name="author" content="Funty#8818"/>
     <meta name="description" content="Alle infos zu Masters of Crafters 3" />
-    <meta name="keywords" content="funty, Masters of Crafters, moc, Website, Minecraft, Projekt, reihe, offiziell, season3, moc3" />
+    <meta name="keywords" content="Funty, Funty#8818, Masters of Crafters, moc, Website, Minecraft, Projekt, reihe, offiziell, season3, moc3" />
     <meta property="og:image" content="../assets/logos/moc3.png" />
 </head>
 
