--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         <br>
         <div id="seasons">
 
+            <div class="seasonContainer" id="season4">
+                <img src="./assets/logos/moc4.png" alt="moc4 logo" class="seasonLogo">
+                <div class="seasonDiv">
+                    <h2 class="title season">Masters of Crafters 4</h2>
+                    <p>
+                        Version: <span class="title">1.20.2 Java & Bedrock Editon</span><br>
+                        Start: <span class="title">soon</span><br>
+                        Ende: <span class="title">?</span><br>
+                        Teilnehmer: <span class="title">?</span><br>
+                    </p>
+                </div>
+                <button class="button" onclick="window.location = 'https://discord.gg/nnbpANhWwz'">Join Discord</button>
+            </div>
+
             <div class="seasonContainer" id="season3">
                 <img src="./assets/logos/moc3.png" alt="moc3 logo" class="seasonLogo">
                 <div class="seasonDiv">
