--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     <h1 class="shine" id="heading">Masters of Crafters</h1>
 
     <div class="container" id="countdownDiv">
-        <h2 class="title">Masters of Crafters 3 endete vor:</h2>
+        <h2 class="title">Masters of Crafters 4 startet in:</h2>
+        <span id="hours">soon...</span>
         <ul>
-            <li><span id="days">??</span>Tagen</li>
+            <!-- <li><span id="days">??</span>Tagen</li>
             <li><span id="hours">??</span>Stunden</li>
             <li><span id="minutes">??</span>Minuten</li>
-            <li><span id="seconds">??</span>Sekunden</li>
+            <li><span id="seconds">??</span>Sekunden</li> -->
         </ul>
     </div>
 
