--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <script src="./assets/utils.js"></script>
-    <link rel="icon" href="https://funty.org/assets/logo.png">
+    <link rel="icon" href="./assets/icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e818a9840c.js" crossorigin="anonymous"></script>
     <meta name="author" content="Funty#8818" />
