--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <h1 class="shine" id="heading">Masters of Crafters</h1>
 
     <div class="container" id="countdownDiv">
-        <h2 class="title">Masters of Crafters 4 startet in:</h2>
-        <span id="hours">soon...</span>
+        <!-- <h2 class="title">Masters of Crafters 4 startet in:</h2> -->
+        <h2 class="title">Masters of Crafters 4 l&auml;uft seit:</h2>
+        <!-- <span id="hours">soon...</span> -->
         <ul>
-            <!-- <li><span id="days">??</span>Tagen</li>
+            <li><span id="days">??</span>Tagen</li>
             <li><span id="hours">??</span>Stunden</li>
             <li><span id="minutes">??</span>Minuten</li>
-            <li><span id="seconds">??</span>Sekunden</li> -->
+            <li><span id="seconds">??</span>Sekunden</li>
         </ul>
     </div>
 
@@ -66,7 +67,7 @@
                     <h2 class="title season">Masters of Crafters 4</h2>
                     <p>
                         Version: <span class="title">1.20.2 Java & Bedrock Editon</span><br>
-                        Start: <span class="title">soon</span><br>
+                        Start: <span class="title">11.11.2023</span><br>
                         Ende: <span class="title">?</span><br>
                         Teilnehmer: <span class="title">?</span><br>
                     </p>
