--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
     <div class="container" id="countdownDiv">
         <!-- <h2 class="title">Masters of Crafters 4 startet in:</h2> -->
-        <h2 class="title">Masters of Crafters 4 l&auml;uft seit:</h2>
+        <!-- <h2 class="title">Masters of Crafters 4 l&auml;uft seit:</h2> -->
+        <h2 class="title">Masters of Crafters 4 endete vor:</h2>
         <!-- <span id="hours">soon...</span> -->
         <ul>
             <li><span id="days">??</span>Tagen</li>
@@ -68,11 +69,12 @@
                     <p>
                         Version: <span class="title">1.20.2 Java & Bedrock Editon</span><br>
                         Start: <span class="title">11.11.2023</span><br>
-                        Ende: <span class="title">?</span><br>
-                        Teilnehmer: <span class="title">?</span><br>
+                        Ende: <span class="title">19.10.2024</span><br>
+                        Teilnehmer: <span class="title">89</span><br>
                     </p>
                 </div>
-                <button class="button" onclick="window.location = 'https://discord.gg/nnbpANhWwz'">Join Discord</button>
+                <button class="button" onclick="window.location.pathname = './moc4'">Mehr Infos</button>
+                <!-- <button class="button" onclick="window.location = 'https://discord.gg/nnbpANhWwz'">Join Discord</button> -->
             </div>
 
             <div class="seasonContainer" id="season3">
