--- a/moc4/index.html
+++ b/moc4/index.html
@@ -30,23 +30,23 @@
                     <div class="inlineDiv">
                         <h3 class="title">Downloads</h3>
                         <!-- coming soon -->
-                         <span>Coming soon</span>
-                        <!-- <div>
-                            <a class="button" href="https://drive.google.com/file/d/1LA1O8ABU8xNO1wfqJL_wAPHeHSBNwS7i/view?usp=share_link">
+                         <!-- <span>Coming soon</span> -->
+                        <div>
+                            <a class="button" href="https://kdrive.infomaniak.com/app/share/861788/6df5c095-d509-4259-9567-3995740d495c/files/51921/preview/archive/51924">
                                 <i class="fas fa-download"></i>
                                 Complete map
                             </a>
         
-                            <a class="button" href="https://drive.google.com/file/d/1lZR79x6h4xn5gteZ0emyqaJWt9_5LRIS/view?usp=share_link">
+                            <a class="button" href="https://kdrive.infomaniak.com/app/share/861788/6df5c095-d509-4259-9567-3995740d495c/files/51921/preview/archive/51923">
                                 <i class="fas fa-download"></i>
                                 Map without end
                             </a>
                 
-                            <a class="button" href="https://drive.google.com/file/d/1CmusX1nUdi0DdvU1rSnbsk0cSLG0jXl7/view?usp=share_link">
+                            <a class="button" href="https://kdrive.infomaniak.com/app/share/861788/6df5c095-d509-4259-9567-3995740d495c/files/51921/preview/archive/51927">
                                 <i class="fas fa-download"></i>
                                 Trimmed map
                             </a>
-                        </div> -->
+                        </div>
                     </div>
 
                     <br>
