--- a/project/index.html
+++ b/project/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>Masters of Crafters - Project infos</title>
-    <meta name="description"
-        content="Auf dieser Seite findest du alle Informationen über ein bestimmtes Masters of Crafters Projekt." />
+    <meta name="description" content="Auf dieser Seite findest du alle Informationen über ein bestimmtes Masters of Crafters Projekt." />
 
     <link rel="icon" href="https://funty.org/assets/logo.png">
     <meta name="author" content="Funty#8818" />
@@ -39,9 +38,11 @@
     <div id="index">
 
         <div id="overview" class="section">
-            <img id="screenshotLeft" class="icon" src="../assets/icons/left-long-solid.svg" alt="⬅">
-            <img src="../assets/screenshots/moc1/1.webp" alt="Screenshot" id="screenshot">
-            <img id="screenshotRight" class="icon" src="../assets/icons/right-long-solid.svg" alt="➡">
+            <div id="screenshotsOverview">
+                <img id="screenshotLeft" class="icon" src="../assets/icons/left-long-solid.svg" alt="⬅">
+                <img src="../assets/screenshots/moc1/1.webp" alt="Screenshot" id="screenshot">
+                <img id="screenshotRight" class="icon" src="../assets/icons/right-long-solid.svg" alt="➡">
+            </div>
 
             <div>
                 <div class="inlineDiv section">
